[gd_scene load_steps=28 format=3 uid="uid://l7nr6wwhryuw"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1"]
[ext_resource type="Script" path="res://Scenes/Player/PlayerFSM.gd" id="2"]
[ext_resource type="Script" path="res://Scenes/Player/States/StateAir.gd" id="3"]
[ext_resource type="Script" path="res://Scenes/Player/States/StateIdle.gd" id="4"]
[ext_resource type="Script" path="res://Scenes/Player/States/StateJump.gd" id="5"]
[ext_resource type="Script" path="res://Scenes/Player/States/StateLadder.gd" id="6"]
[ext_resource type="Script" path="res://Scenes/Player/States/StateSwim.gd" id="7"]
[ext_resource type="Script" path="res://Scenes/Player/States/StateWalk.gd" id="8"]
[ext_resource type="PackedScene" uid="uid://mq8sjln3kjkl" path="res://Scenes/Water/Waves.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://bin4j65pnv2ee" path="res://Assets/Dark/Gunslinger/Gunslinger/Gunslinger 48x48 Sprite Sheet no weapons for sprite stacking.png" id="10"]
[ext_resource type="Texture2D" uid="uid://50ly22qypeo5" path="res://Assets/Dark/Gunslinger/Gun/Guns Sprite Sheet 32x32.png" id="11"]
[ext_resource type="Animation" path="res://Animations/Player/run.tres" id="12"]
[ext_resource type="Animation" path="res://Animations/Player/jump.tres" id="13"]
[ext_resource type="Script" path="res://Scenes/Player/States/StateRun.gd" id="14"]
[ext_resource type="Script" path="res://Scenes/Player/GunPivot.gd" id="16"]
[ext_resource type="Animation" path="res://Animations/Player/walk.tres" id="18"]
[ext_resource type="Animation" path="res://Animations/Player/idle.tres" id="19"]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(6.5, 13.5)

[sub_resource type="CapsuleShape2D" id="5"]
radius = 5.0
height = 12.3406

[sub_resource type="Animation" id="10"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [46]
}

[sub_resource type="Animation" id="1"]
resource_name = "air"
length = 0.1

[sub_resource type="Animation" id="3"]
length = 1.8
step = 0.05

[sub_resource type="Animation" id="11"]
resource_name = "wall_hang"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00178134, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [45, 46, 47, 48, 49, 50]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ry1u7"]
_data = {
"RESET": SubResource("10"),
"air": SubResource("1"),
"idle": ExtResource("19"),
"jump": ExtResource("13"),
"ladder": SubResource("3"),
"run": ExtResource("12"),
"walk": ExtResource("18"),
"wall_hang": SubResource("11")
}

[sub_resource type="Animation" id="8"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="9"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y1lix"]
_data = {
"idle": SubResource("8"),
"shoot": SubResource("9")
}

[node name="Player" type="CharacterBody2D" groups=["players"]]
collision_mask = 6
script = ExtResource("1")

[node name="Timers" type="Node2D" parent="."]
visible = false

[node name="JumpTimer" type="Timer" parent="Timers"]
wait_time = 0.06
one_shot = true

[node name="FloorTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="LadderTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="PlatformTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="PlayerStates" type="Node2D" parent="."]
visible = false
script = ExtResource("2")

[node name="Air" type="Node2D" parent="PlayerStates"]
script = ExtResource("3")

[node name="Idle" type="Node2D" parent="PlayerStates"]
script = ExtResource("4")
tag = "idle"

[node name="Jump" type="Node2D" parent="PlayerStates"]
script = ExtResource("5")
tag = "jump"

[node name="Ladder" type="Node2D" parent="PlayerStates"]
script = ExtResource("6")

[node name="Swim" type="Node2D" parent="PlayerStates"]
script = ExtResource("7")
tag = "swim"

[node name="Walk" type="Node2D" parent="PlayerStates"]
script = ExtResource("8")
tag = "walk"

[node name="Run" type="Node2D" parent="PlayerStates"]
script = ExtResource("14")
tag = "run"

[node name="Waves" parent="." instance=ExtResource("9")]
visible = false
z_index = 0
position = Vector2(0, 15)
amount = 20
preprocess = 1.0
explosiveness = 0.0

[node name="TerrainBox" type="CollisionShape2D" parent="."]
visible = false
z_index = 100
position = Vector2(-0.5, 10)
shape = SubResource("4")
one_way_collision = true

[node name="HurtBox" type="Area2D" parent="."]
visible = false
z_index = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
z_index = 100
position = Vector2(0, 10)
shape = SubResource("5")

[node name="Gunslinger" type="Sprite2D" parent="."]
texture = ExtResource("10")
hframes = 9
vframes = 13
frame = 46
region_rect = Rect2(-117, 169, 2, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gunslinger"]
libraries = {
"": SubResource("AnimationLibrary_ry1u7")
}

[node name="GunPivot" type="Marker2D" parent="."]
position = Vector2(-2, 9)
script = ExtResource("16")

[node name="Gun1" type="Sprite2D" parent="GunPivot"]
position = Vector2(12, -1)
texture = ExtResource("11")
hframes = 4
vframes = 5
region_rect = Rect2(-10.2548, 8.09364, 143.394, 156.502)

[node name="AnimationPlayer" type="AnimationPlayer" parent="GunPivot/Gun1"]
libraries = {
"": SubResource("AnimationLibrary_y1lix")
}

[node name="PlayerCamera" type="Camera2D" parent="."]
visible = false
zoom = Vector2(0.75, 0.75)

[connection signal="timeout" from="Timers/PlatformTimer" to="." method="_on_PlatformTimer_timeout"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
